# fastcat

./: .gitignore  .pypirc  CONTRIBUTING.md  Demo.ipynb  Demo_advanced.ipynb  Demo_simple.ipynb  LICENSE  MANIFEST.in  PKG-INFO  README.md  README.rst  Untitled.ipynb  advanced.md  nrrd_volume_2_mhd.ipynb  pyproject.toml  setup.cfg  setup.py  test.mhd  test_gpu.yaml  tox.ini
demo/: 100keV.xlsx  demo.py  distribution.py  multiprocessing-demo.py  test_hvl.py  xg-profile.py
docs/: Makefile  conf.py  index.rst
fastcat/: __init__.py  detector.py  fastcat.py  fastcat.py.bak  fastcatGUI.py  fastmc_scatter.py  ggems_scatter.py  ggems_scatter_script.py  ggems_simulate.py  look_at_background.ipynb  ogate_scatter.py  old_simulate_ggems.py  patient_data.py  phantoms.py  simulate.py  simulate_ggems.py  spectrum.py  test_ggems_scatter.ipynb  utils.py
paper/: codemeta.json  paper.bib  paper.md
tests/: Add G4 Elements.ipynb  Al6_W6_counts_comparison-new-method.ipynb  Al6_W6_counts_comparison.ipynb  Catphan_515_notebook-Copy1.ipynb  Catphan_515_notebook.ipynb  Catphan_515_notebook_ with_code_to_make_phantom.ipynb  Comparing_Adipose.ipynb  Deconvolution_test.ipynb  Demo.ipynb  Demo_prepared.ipynb  Dose_Comparison_Topas_FC.ipynb  Energy Dependance Analysis.ipynb  Exp Validation.ipynb  Fixing MTF.ipynb  Fixing_MTF.ipynb  Fixing_MTF_phantom.ipynb  G4_Elements_to_topas.ipynb  G4_file_topas.txt  Low Memory Version.ipynb  MTF fiddling.ipynb  Make Catphan.ipynb  Make_Catphan_515&404.ipynb  Make_Catphan_515.ipynb  Make_G4_Elements.ipynb  New Noise Analysis.ipynb  New_Dose_Test.ipynb  (+18 more)
(+1283 files in other folders)
